<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:paddingBottom="16dp">

        <View
            android:id="@+id/drag_handle"
            android:layout_width="32dp"
            android:layout_height="4dp"
            android:layout_marginVertical="22dp"
            android:alpha=".4"
            android:background="?attr/colorOnSurfaceVariant"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/title_upload"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/drag_handle" />

        <LinearLayout
            android:id="@+id/btn_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/title">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/camera_btn"
                style="@style/Widget.Material.Dialog.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_menu_camera"
                app:icon="@drawable/ic_cemra_24px" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/gallery_btn"
                style="@style/Widget.Material.Dialog.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_menu_gallery"
                app:icon="@drawable/ic_gallery_24px" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/file_btn"
                style="@style/Widget.Material.Dialog.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_menu_file"
                app:icon="@drawable/ic_file_24px" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/folder_btn"
                style="@style/Widget.Material.Dialog.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_menu_folder"
                app:icon="@drawable/ic_folder_24px" />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/shared_list_btn"
            style="?attr/materialIconButtonFilledStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/title_shared_list"
            app:cornerRadius="12dp"
            app:icon="@drawable/ic_group_24px"
            app:iconGravity="textStart"
            app:iconPadding="8dp"
            app:layout_constraintTop_toBottomOf="@id/btn_container" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>